# grin-pool

./: .gitignore  README.md  kube
ansible/: Makefile  ansible.cfg  deploy.sh  inventory  site.retry  site.yaml  variables.yaml
bitgrin/: Dockerfile  Makefile  run-wallet.sh  stratumserver.rs
docker-compose/: .env  README.md  docker-compose.yml
grin/: Dockerfile  Makefile  grin-server.toml  grin-wallet.toml  libheath.py  run-wallet.sh  run.sh  stratumserver.rs
grin-py/: Dockerfile  Makefile  requirements.txt
keybase/: Dockerfile  Dockerfile.user1000  Makefile  entrypoint.sh
kube/: README.md  auditor.yaml  blockValidator.yaml  blockWatcher.yaml  claim.yaml  config.ini  dbBackup.yaml  dbBackup_claim.yaml  dbInit.yaml  environment_configmap_bitgrinpool.yaml  grin-hd_set.yaml  grin.yaml  grinStats.yaml  grin_pv.yaml  grin_set.yaml  grin_svc.yaml  grinpool_secrets.sh  grinshareWatcher.yaml  grinwallet.yaml  grinwallet_claim.yaml  grinwallet_pv.yaml  healthCheck.yaml  ingress_stratum.yaml  letsencrypt_configmap_floopool.yaml  letsencrypt_grinpool.yaml  makePayouts.yaml  mysql.yaml  mysql_configmap.yaml  mysql_public_svc.yaml  mysql_pv.yaml  mysql_svc.yaml  nginx_bitgrinmining.yaml  paymentEstimator.yaml  paymentMaker.yaml  poolAPI.yaml  poolAPIv2.yaml  poolStats.yaml  poolblockUnlocker.yaml  poolshareWatcher.yaml  redis.yaml  (+16 more)
letsencrypt/: Dockerfile  Makefile  bitgrin-README.txt  entrypoint  route53_hook.rb
logstash/: Dockerfile  Makefile  grinsharefilter.conf  jvm.options  logstash.yml  poolblockfilter.conf  poolsharefilter.conf  run.sh  sharefilter.conf
nginx/: Dockerfile  Makefile
rmq/: Dockerfile  Makefile  definitions.json  entrypoint.sh  import_config.sh  rabbitmqadmin
services/: Dockerfile  Makefile  NEED_dosWatcher.py  README.md  blockValidator.py  (+9 more)
stratum/: .dockerignore  Cargo.toml  Dockerfile  Makefile  grin-pool.toml  run.sh
stratum/src/: main.rs
stratum/src/pool/: config.rs  consensus.rs  kafka.rs  logger.rs  mod.rs  pool.rs  proto.rs  proto.rs.x  server.rs  server.rs.x  util.rs  worker.rs  worker.rs.x
(+451 files in other folders)
