[package]
name = "pool"
version = "0.1.0"
authors = ["bdoyle"]

[[bin]]
name = "grin-pool"
path = "src/main.rs"

[dependencies]
bufstream = "0.1"
rustc-serialize = "*"
jsonrpc-core = "~4.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
slog = { version = "~2.1", features = ["max_level_trace", "release_max_level_trace"] }
slog-term = "2.1"
slog-async = "2.1"
time = "0.1"
lazy_static = "0.2"
toml = "0.4"
sha2 = "0.8.0"
kafka = "0.7.0"
error-chain = "0.10"
